dev_ws/log/build_2021-05-03_13-04-28/my_package/stderr.log
  File "D:\Hiverlab\Omron_Robotics\dev_ws\install\Lib\site-packages\my_package\publisher.py", line 64
    self.get_logger().info('Publishing")
                                       ^
SyntaxError: EOL while scanning string literal

